<resources>
    <string name="app_name">Lyrics Getter Ext</string>

    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="add_package_to_title">Add application</string>

    <!-- Preference Titles -->
    <string name="preferences_header">Prefreences</string>
    <string name="about_header">About</string>
    <string name="enabled_title">Enabled</string>
    <string name="lyricsGetterStatus_title">Lyrics Getter Connection Status</string>

    <!--    &lt;!&ndash; Unsupport ROM &ndash;&gt;-->
<!--    <string name="unsupport_rom_title">Unsupport</string>-->
<!--    <string name="unsupport_rom_summary">Sorry, We don\'t support this ROM</string>-->

    <!-- Toast -->
    <string name="toast_cannot_start_lyricsgetter">Sorry, Lyrics Getter does not start, please check if LyricsGetter is installed properly!</string>
    <string name="toast_cannot_get_rules">Sorry, Get Rules Failed. Please Check Your Network.</string>
    <string name="toast_get_notification_permission">Notification permission not granted. Please allow notification permission for this app in the next screen.</string>
    <string name="target_apps_title">Target apps</string>

    <string-array name="translate_choose_display">
        <item>仅原文</item>
        <item>仅译文</item>
        <item>原文 + 译文</item>
    </string-array>
    <string-array name="translate_choose_value">
        <item>origin</item>
        <item>translated</item>
        <item>both</item>
    </string-array>
    <string name="force_repeat_title">Forced Repeat Lyrics</string>
    <string name="force_repeat_summary">Randomly add zero-width spaces in the middle of repeating lyrics</string>
    <string name="offset_label">Offset (ms):</string>
    <string name="hint_enter_offset">Enter offset</string>
    <string name="submit_button">Submit</string>
    <string name="offset_not_valid">Offset not valid</string>
    <string name="lyric_not_found">No Lyric Found</string>
    <string name="alias_title">Alias</string>
    <string name="info_title">Title</string>
    <string name="info_artist">Artist</string>
    <string name="info_album">Album</string>
    <string name="dialog_lyric_rescan">Do you want to search for lyrics again?</string>
    <string name="search_instruction">Please manually search again after modifying the alias</string>
    <string name="title_lyrics_configuration">Lyrics Configuration</string>
</resources>
