<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">


    <PreferenceCategory android:title="@string/preferences_header">
        <SwitchPreference
            android:key="enabled"
            android:title="@string/enabled_title" />
        <SwitchPreference
            android:key="connection_status"
            android:title="@string/lyricsGetterStatus_title"
        />
        <ListPreference
            android:key="translate_type"
            android:title="原译文歌词"
            android:summary="仅供简中用户。"
            android:entries="@array/translate_choose_display"
            android:entryValues="@array/translate_choose_value"
            android:defaultValue="origin"
        />
        <SwitchPreference
            android:title="@string/force_repeat_title"
            android:summary="@string/force_repeat_summary"
            android:key="force_repeat"
        />
        <statusbar.finder.preferences.PackageListPreference
            android:title="@string/target_apps_title"
            android:key="target_packages"
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_header"
        android:key="about">

        <Preference
            android:key="app"
            android:title="@string/app_name" />
        <Preference
            android:key="statusbarlyricext"
            android:title="StatusBarLyricExt" />
        <Preference
            android:key="lyricview"
            android:title="LyricView" />
    </PreferenceCategory>

</PreferenceScreen>
